HakerRank/compiling_error.txt
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp: In function 'int main()':
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:76:40: error: 'stoi' was not declared in this scope
             int q_item = stoi(q_temp[i]);
                                        ^
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp: In function 'std::vector<std::__cxx11::basic_string<char> > split_string(std::__cxx11::string)':
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:90:5: warning: lambda expressions only available with -std=c++11 or -std=gnu++11
     });
     ^
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:90:6: error: no matching function for call to 'unique(std::__cxx11::basic_string<char>::iterator, std::__cxx11::basic_string<char>::iterator, split_string(std::__cxx11::string)::<lambda(const char&, const char&)>)'
     });
      ^
In file included from C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/algorithm:62:0,
                 from C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/x86_64-w64-mingw32/bits/stdc++.h:64,
                 from C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:1:
C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/bits/stl_algo.h:992:5: note: candidate: template<class _FIter> _FIter std::unique(_FIter, _FIter)
     unique(_ForwardIterator __first, _ForwardIterator __last)
     ^
C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/bits/stl_algo.h:992:5: note:   template argument deduction/substitution failed:
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:90:6: note:   candidate expects 2 arguments, 3 provided
     });
      ^
In file included from C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/algorithm:62:0,
                 from C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/x86_64-w64-mingw32/bits/stdc++.h:64,
                 from C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:1:
C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/bits/stl_algo.h:1022:5: note: candidate: template<class _FIter, class _BinaryPredicate> _FIter std::unique(_FIter, _FIter, _BinaryPredicate)
     unique(_ForwardIterator __first, _ForwardIterator __last,
     ^
C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/bits/stl_algo.h:1022:5: note:   template argument deduction/substitution failed:
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp: In substitution of 'template<class _FIter, class _BinaryPredicate> _FIter std::unique(_FIter, _FIter, _BinaryPredicate) [with _FIter = __gnu_cxx::__normal_iterator<char*, std::__cxx11::basic_string<char> >; _BinaryPredicate = split_string(std::__cxx11::string)::<lambda(const char&, const char&)>]':
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:90:6:   required from here
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:90:6: error: template argument for 'template<class _FIter, class _BinaryPredicate> _FIter std::unique(_FIter, _FIter, _BinaryPredicate)' uses local type 'split_string(std::__cxx11::string)::<lambda(const char&, const char&)>'
     });
      ^
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:90:6: error:   trying to instantiate 'template<class _FIter, class _BinaryPredicate> _FIter std::unique(_FIter, _FIter, _BinaryPredicate)'
C:\Users\hiral.sanjaybhaishah\Desktop\Git\Programming\HakerRank\minimumBribes.cpp:95:22: error: 'std::__cxx11::string {aka class std::__cxx11::basic_string<char>}' has no member named 'pop_back'
         input_string.pop_back();
                      ^
